# TliteTemplate

./: Dockerfile  compose.yaml  pyproject.toml
src/: app.py  settings.py  tlite.py
